--- a/generate_result.ipynb
+++ b/generate_result.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_20976\\1789048249.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_20976\\360327169.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n"
      ]
     },
@@ -50,7 +50,7 @@
     "        if model_name == \"lora_large_clip\":\n",
     "            accuracy_data[\"Ours\"] = max_valid_acc\n",
     "        else:\n",
-    "            model_column_name = model_name.replace(\"resnet\", \"ResNet-\").replace(\"resnext\", \"ResNext-\").replace(\"50\", \"50\").replace(\"101\", \"101\")\n",
+    "            model_column_name = model_name.replace(\"resnet\", \"ResNet-\").replace(\"resnext\", \"ResNeXt-\").replace(\"50\", \"50\").replace(\"101\", \"101\")\n",
     "            accuracy_data[model_column_name] = max_valid_acc\n",
     "\n",
     "    # Append to the DataFrame\n",
@@ -74,7 +74,7 @@
     "        train_log_df = pd.read_csv(train_log_path)\n",
     "        valid_log_df = pd.read_csv(valid_log_path)\n",
     "\n",
-    "        model_prefix = \"Ours\" if model_name == \"lora_large_clip\" else model_name.replace(\"resnet\", \"ResNet-\").replace(\"resnext\", \"ResNext-\")\n",
+    "        model_prefix = \"Ours\" if model_name == \"lora_large_clip\" else model_name.replace(\"resnet\", \"ResNet-\").replace(\"resnext\", \"ResNeXt-\")\n",
     "\n",
     "        # Process train and valid logs\n",
     "        for epoch in train_log_df[\"epoch\"].unique():\n",
