--- a/generate_result.ipynb
+++ b/generate_result.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_20976\\3471089505.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_18412\\3635377310.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n"
      ]
     },
@@ -25,7 +25,7 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "data_sizes = [30.0, 40.0, 50.0, 60.0, 72.0, 80.0, 90.0, 100] # 30.0, 40.0, \n",
+    "data_sizes = [23.0, 30.0, 40.0, 50.0, 60.0, 72.0, 80.0, 90.0, 100] # 30.0, 40.0, \n",
     "model_names = [\"lora_large_clip\", \"resnet50\", \"resnet101\", \"resnext50\", \"resnext101\"]\n",
     "results_path = r\"C:\\Users\\my\\Desktop\\Yolo\\yolo111\\lora_vit\\results\"\n",
     "\n",
