--- a/generate_result.ipynb
+++ b/generate_result.ipynb
@@ -9,7 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_11024\\3513330959.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_26928\\685432095.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_26928\\685432095.py:59: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n"
      ]
     },
@@ -59,6 +61,33 @@
     "\n",
     "# Save accuracy_data_size.csv\n",
     "accuracy_data_size_df.to_csv(data_path + \"accuracy_data_size.csv\", index=False)\n",
+    "accuracy_data_size_df = pd.DataFrame(columns=[\"data size\", \"Ours\", \"ResNet-50\", \"ResNet-101\", \"ResNext-50\", \"ResNext-101\"])\n",
+    "for data_size in data_sizes:\n",
+    "    accuracy_data = {\"data size\": data_size}\n",
+    "    for model_name in model_names:\n",
+    "        folder_name = f\"mobileODT{data_size}%_{model_name}\"\n",
+    "        valid_log_path = os.path.join(results_path, folder_name, f\"mobileODT{data_size}%_train_log.csv\")\n",
+    "        \n",
+    "        # Read validation log\n",
+    "        valid_log_df = pd.read_csv(valid_log_path)\n",
+    "        \n",
+    "        # Find the highest validation accuracy\n",
+    "        max_valid_acc = valid_log_df[\"ACC\"].max()\n",
+    "        \n",
+    "        # Map model names to column names correctly\n",
+    "        if model_name == \"lora_large_clip\":\n",
+    "            accuracy_data[\"Ours\"] = max_valid_acc\n",
+    "        else:\n",
+    "            model_column_name = model_name.replace(\"resnet\", \"ResNet-\").replace(\"resnext\", \"ResNeXt-\").replace(\"50\", \"50\").replace(\"101\", \"101\")\n",
+    "            accuracy_data[model_column_name] = max_valid_acc\n",
+    "\n",
+    "    # Append to the DataFrame\n",
+    "    accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "# Save accuracy_data_size.csv\n",
+    "accuracy_data_size_df.to_csv(data_path + \"train_accuracy_data_size.csv\", index=False)\n",
+    "\n",
     "\n",
     "# For each data size, generate accuracy_epoch_{data_percentage}.csv and train_loss_epoch_{data_percentage}.csv\n",
     "for data_size in data_sizes:\n",
@@ -113,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
