--- a/generate_result.ipynb
+++ b/generate_result.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_25952\\685432095.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_7716\\62642079.py:36: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
-      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_25952\\685432095.py:59: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_7716\\62642079.py:36: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_7716\\62642079.py:64: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_7716\\62642079.py:64: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n"
      ]
     },
@@ -30,23 +34,26 @@
     "data_sizes = [20.0, 30.0, 40.0, 50.0, 60.0, 70.0, 80.0, 90.0, 100] # 30.0, 40.0, \n",
     "model_names = [\"lora_large_clip\", \"resnet50\", \"resnet101\", \"resnext50\", \"resnext101\"]\n",
     "results_path = r\"C:\\Users\\my\\Desktop\\Yolo\\yolo111\\lora_vit\\results\"\n",
-    "\n",
+    "additional_train_types_for_100 = [\"googlenet\", \"alexnet\", \"densenet121\", \"vgg19\"]\n",
+    "additional_percentages = [\"fold_1\", \"fold_2\", \"fold_3\", \"fold_4\", \"fold_5\"]\n",
     "# Initialize a DataFrame for accuracy_data_size.csv\n",
     "accuracy_data_size_df = pd.DataFrame(columns=[\"data size\", \"Ours\", \"ResNet-50\", \"ResNet-101\", \"ResNext-50\", \"ResNext-101\"])\n",
     "\n",
     "data_path = \"./data/\"\n",
-    "\n",
+    "model_names = model_names + additional_train_types_for_100\n",
     "for data_size in data_sizes:\n",
     "    accuracy_data = {\"data size\": data_size}\n",
     "    for model_name in model_names:\n",
     "        folder_name = f\"mobileODT{data_size}%_{model_name}\"\n",
     "        valid_log_path = os.path.join(results_path, folder_name, f\"mobileODT{data_size}%_valid_log.csv\")\n",
     "        \n",
-    "        # Read validation log\n",
-    "        valid_log_df = pd.read_csv(valid_log_path)\n",
-    "        \n",
-    "        # Find the highest validation accuracy\n",
-    "        max_valid_acc = valid_log_df[\"ACC\"].max()\n",
+    "        try:\n",
+    "            # Try to read the validation log\n",
+    "            valid_log_df = pd.read_csv(valid_log_path)\n",
+    "            # Find the highest validation accuracy\n",
+    "            max_valid_acc = valid_log_df[\"ACC\"].max()\n",
+    "        except FileNotFoundError:\n",
+    "            max_valid_acc = None  # File not found, set accuracy as None\n",
     "        \n",
     "        # Map model names to column names correctly\n",
     "        if model_name == \"lora_large_clip\":\n",
@@ -68,11 +75,13 @@
     "        folder_name = f\"mobileODT{data_size}%_{model_name}\"\n",
     "        valid_log_path = os.path.join(results_path, folder_name, f\"mobileODT{data_size}%_train_log.csv\")\n",
     "        \n",
-    "        # Read validation log\n",
-    "        valid_log_df = pd.read_csv(valid_log_path)\n",
-    "        \n",
-    "        # Find the highest validation accuracy\n",
-    "        max_valid_acc = valid_log_df[\"ACC\"].max()\n",
+    "        try:\n",
+    "            # Try to read the validation log\n",
+    "            valid_log_df = pd.read_csv(valid_log_path)\n",
+    "            # Find the highest validation accuracy\n",
+    "            max_valid_acc = valid_log_df[\"ACC\"].max()\n",
+    "        except FileNotFoundError:\n",
+    "            max_valid_acc = None  # File not found, set accuracy as None\n",
     "        \n",
     "        # Map model names to column names correctly\n",
     "        if model_name == \"lora_large_clip\":\n",
@@ -88,6 +97,7 @@
     "# Save accuracy_data_size.csv\n",
     "accuracy_data_size_df.to_csv(data_path + \"train_accuracy_data_size.csv\", index=False)\n",
     "\n",
+    "model_names = [\"lora_large_clip\", \"resnet50\", \"resnet101\", \"resnext50\", \"resnext101\"]\n",
     "\n",
     "# For each data size, generate accuracy_epoch_{data_percentage}.csv and train_loss_epoch_{data_percentage}.csv\n",
     "for data_size in data_sizes:\n",
@@ -123,6 +133,107 @@
     "    train_loss_epoch_df.to_csv(data_path + f\"train_loss_epoch_{data_size}%.csv\", index=False)\n",
     "\n",
     "print(\"Datasets have been created successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_7716\\655084332.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_7716\\655084332.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_7716\\655084332.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_7716\\655084332.py:62: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_7716\\655084332.py:62: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+      "C:\\Users\\my\\AppData\\Local\\Temp\\ipykernel_7716\\655084332.py:62: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: 'C:\\\\Users\\\\my\\\\Desktop\\\\Yolo\\\\yolo111\\\\lora_vit\\\\results\\\\mobileODTfold_3_lora_large_clip\\\\mobileODTfold_3_train_log.csv'\n",
+      "[Errno 2] No such file or directory: 'C:\\\\Users\\\\my\\\\Desktop\\\\Yolo\\\\yolo111\\\\lora_vit\\\\results\\\\mobileODTfold_4_lora_large_clip\\\\mobileODTfold_4_train_log.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "model_names = [\"lora_large_clip\", \"resnet50\", \"resnet101\", \"resnext50\", \"resnext101\"]\n",
+    "results_path = r\"C:\\Users\\my\\Desktop\\Yolo\\yolo111\\lora_vit\\results\"\n",
+    "data_sizes = [\"fold_1\", \"fold_2\", \"fold_3\", \"fold_4\", \"fold_5\"]\n",
+    "# Initialize a DataFrame for accuracy_data_size.csv\n",
+    "accuracy_data_size_df = pd.DataFrame(columns=[\"data size\", \"Ours\", \"ResNet-50\", \"ResNet-101\", \"ResNext-50\", \"ResNext-101\"])\n",
+    "\n",
+    "data_path = \"./data/\"\n",
+    "for data_size in data_sizes:\n",
+    "    accuracy_data = {\"data size\": data_size}\n",
+    "    for model_name in model_names:\n",
+    "        folder_name = f\"mobileODT{data_size}_{model_name}\"\n",
+    "        valid_log_path = os.path.join(results_path, folder_name, f\"mobileODT{data_size}_valid_log.csv\")\n",
+    "        \n",
+    "        try:\n",
+    "            # Try to read the validation log\n",
+    "            valid_log_df = pd.read_csv(valid_log_path)\n",
+    "            # Find the highest validation accuracy\n",
+    "            max_valid_acc = valid_log_df[\"ACC\"].max()\n",
+    "        except FileNotFoundError:\n",
+    "            max_valid_acc = None  # File not found, set accuracy as None\n",
+    "        \n",
+    "        # Map model names to column names correctly\n",
+    "        if model_name == \"lora_large_clip\":\n",
+    "            accuracy_data[\"Ours\"] = max_valid_acc\n",
+    "        else:\n",
+    "            model_column_name = model_name.replace(\"resnet\", \"ResNet-\").replace(\"resnext\", \"ResNeXt-\").replace(\"50\", \"50\").replace(\"101\", \"101\")\n",
+    "            accuracy_data[model_column_name] = max_valid_acc\n",
+    "\n",
+    "    # Append to the DataFrame\n",
+    "    accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "# Save accuracy_data_size.csv\n",
+    "accuracy_data_size_df.to_csv(data_path + \"accuracy_data_CV.csv\", index=False)\n",
+    "accuracy_data_size_df = pd.DataFrame(columns=[\"data size\", \"Ours\", \"ResNet-50\", \"ResNet-101\", \"ResNext-50\", \"ResNext-101\"])\n",
+    "for data_size in data_sizes:\n",
+    "    accuracy_data = {\"data size\": data_size}\n",
+    "    for model_name in model_names:\n",
+    "        folder_name = f\"mobileODT{data_size}_{model_name}\"\n",
+    "        valid_log_path = os.path.join(results_path, folder_name, f\"mobileODT{data_size}_train_log.csv\")\n",
+    "        \n",
+    "        try:\n",
+    "            # Try to read the validation log\n",
+    "            valid_log_df = pd.read_csv(valid_log_path)\n",
+    "            # Find the highest validation accuracy\n",
+    "            max_valid_acc = valid_log_df[\"ACC\"].max()\n",
+    "        except FileNotFoundError as e:\n",
+    "            print(e)\n",
+    "            max_valid_acc = None  # File not found, set accuracy as None\n",
+    "        \n",
+    "        # Map model names to column names correctly\n",
+    "        if model_name == \"lora_large_clip\":\n",
+    "            accuracy_data[\"Ours\"] = max_valid_acc\n",
+    "        else:\n",
+    "            model_column_name = model_name.replace(\"resnet\", \"ResNet-\").replace(\"resnext\", \"ResNeXt-\").replace(\"50\", \"50\").replace(\"101\", \"101\")\n",
+    "            accuracy_data[model_column_name] = max_valid_acc\n",
+    "\n",
+    "    # Append to the DataFrame\n",
+    "    accuracy_data_size_df = pd.concat([accuracy_data_size_df, pd.DataFrame([accuracy_data])], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "# Save accuracy_data_size.csv\n",
+    "accuracy_data_size_df.to_csv(data_path + \"train_accuracy_data_CV.csv\", index=False)\n"
    ]
   }
  ],
